force-app/main/default/objects/Delivery_Tracking__c/Delivery_Tracking__c.object-meta.xml
<CustomObject>
    <label>Delivery Tracking</label>
    <nameField>
        <displayFormat>DT-{0000}</displayFormat>
        <label>Delivery Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>