force-app/main/default/objects/Delivery_Tracking__c/fields/Carrier__c.field-meta.xml
<CustomField>
<fullName>Carrier__c</fullName>
<label>Carrier</label>
<required>true</required>
<type>Picklist</type>
<valueSet>
<restricted>true</restricted>
<valueSetDefinition>
<value><fullName>BlueDart</fullName><default>false</default><label>BlueDart</label></value>
<value><fullName>Delhivery</fullName><default>false</default><label>Delhivery</label></value>
<value><fullName>Shiprocket</fullName><default>false</default><label>Shiprocket</label></value>
<value><fullName>DTDC</fullName><default>false</default><label>DTDC</label></value>
<value><fullName>FedEx</fullName><default>false</default><label>FedEx</label></value>
<value><fullName>Other</fullName><default>false</default><label>Other</label></value>
</valueSetDefinition>
</valueSet>
</CustomField>