force-app/main/default/objects/Delivery_Tracking__c/fields/Estimated_Delivery__c.field-meta.xml
<CustomField>
<fullName>Estimated_Delivery__c</fullName>
<label>Estimated Delivery</label>
<type>Date</type>
</CustomField>