force-app/main/default/objects/Delivery_Tracking__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
<fullName>Last_Synced__c</fullName>
<label>Last Synced</label>
<type>DateTime</type>
</CustomField>