force-app/main/default/objects/Delivery_Tracking__c/fields/Order__c.field-meta.xml
<CustomField>
<fullName>Order__c</fullName>
<deleteConstraint>Restrict</deleteConstraint>
<label>Order</label>
<referenceTo>Order</referenceTo>
<relationshipLabel>Delivery Trackings</relationshipLabel>
<required>true</required>
<relationshipName>Delivery_Trackings</relationshipName>
<type>Lookup</type>
</CustomField>