force-app/main/default/objects/Delivery_Tracking__c/fields/Status__c.field-meta.xml
<CustomField>
<fullName>Status__c</fullName>
<label>Status</label>
<required>true</required>
<type>Picklist</type>
<valueSet>
<restricted>true</restricted>
<valueSetDefinition>
<value><fullName>Label Created</fullName><default>true</default><label>Label Created</label></value>
<value><fullName>Picked Up</fullName><default>false</default><label>Picked Up</label></value>
<value><fullName>In Transit</fullName><default>false</default><label>In Transit</label></value>
<value><fullName>Out for Delivery</fullName><default>false</default><label>Out for Delivery</label></value>
<value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
<value><fullName>Delivery Exception</fullName><default>false</default><label>Delivery Exception</label></value>
</valueSetDefinition>
</valueSet>
</CustomField>