force-app/main/default/objects/Delivery_Tracking__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
<fullName>Tracking_Number__c</fullName>
<externalId>true</externalId>
<label>Tracking Number</label>
<length>60</length>
<type>Text</type>
<unique>true</unique>
</CustomField>